--- a/src/Components/test/testassets/BasicTestApp/Index.razor
+++ b/src/Components/test/testassets/BasicTestApp/Index.razor
@@ -57,8 +57,8 @@
         <option value="BasicTestApp.ReliabilityComponent">Server reliability component</option>
         <option value="BasicTestApp.RenderFragmentToggler">Render fragment renderer</option>
         <option value="BasicTestApp.ReorderingFocusComponent">Reordering focus retention</option>
+        <option value="BasicTestApp.RouterTest.NavigationManagerComponent">NavigationManager Test</option>
         <option value="BasicTestApp.RouterTest.TestRouter">Router</option>
-        <option value="BasicTestApp.RouterTest.UriHelperComponent">UriHelper Test</option>
         <option value="BasicTestApp.SvgComponent">SVG</option>
         <option value="BasicTestApp.SvgWithChildComponent">SVG with child component</option>
         <option value="BasicTestApp.TextOnlyComponent">Plain text</option>
