--- a/src/Components/test/testassets/BasicTestApp/RouterTest/Links.razor
+++ b/src/Components/test/testassets/BasicTestApp/RouterTest/Links.razor
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Components.Routing
-@inject Microsoft.AspNetCore.Components.IUriHelper uriHelper
+@inject NavigationManager NavigationManager
 <style type="text/css">
     a.active {
         background-color: yellow;
@@ -22,11 +22,11 @@
     <li><NavLink href="/subdir/LongPage2">Long page 2</NavLink></li>
 </ul>
 
-<button id="do-navigation" @onclick=@(x => uriHelper.NavigateTo("Other"))>
+<button id="do-navigation" @onclick=@(x => NavigationManager.NavigateTo("Other"))>
     Programmatic navigation
 </button>
 
-<button id="do-navigation-forced" @onclick=@(x => uriHelper.NavigateTo("Other", true))>
+<button id="do-navigation-forced" @onclick=@(x => NavigationManager.NavigateTo("Other", true))>
     Programmatic navigation with force-load
 </button>
 
