--- a/src/Components/test/testassets/ComponentsApp.App/App.razor
+++ b/src/Components/test/testassets/ComponentsApp.App/App.razor
@@ -1,8 +1,8 @@
 @using Microsoft.AspNetCore.Components;
 <CascadingValue Value="Name" Name="Name" IsFixed=true>
-    <Router AppAssembly=typeof(ComponentsApp.App.App).Assembly Context="routeContext">
+    <Router AppAssembly=typeof(ComponentsApp.App.App).Assembly Context="routeData">
         <Found>
-            <RouteView RouteData="@routeContext" DefaultLayout="@typeof(MainLayout)" />
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
