Convert router E2E test to use new APIs

--- a/src/Components/test/testassets/BasicTestApp/AuthTest/AuthRouter.razor
+++ b/src/Components/test/testassets/BasicTestApp/AuthTest/AuthRouter.razor
@@ -9,13 +9,15 @@
 *@
 
 <CascadingAuthenticationState>
-    <Router AppAssembly=typeof(BasicTestApp.Program).Assembly>
+    <Router AppAssembly="@typeof(BasicTestApp.Program).Assembly">
+        @* This will be put back later when implemented
         <AuthorizingContent>Authorizing...</AuthorizingContent>
         <NotAuthorizedContent>
             <div id="auth-failure">
                 Sorry, @(context.User.Identity.Name ?? "anonymous"), you're not authorized.
             </div>
         </NotAuthorizedContent>
+        *@
     </Router>
 </CascadingAuthenticationState>
 
