--- a/src/Components/test/testassets/BasicTestApp/RouterTest/TestRouter.razor
+++ b/src/Components/test/testassets/BasicTestApp/RouterTest/TestRouter.razor
@@ -1,6 +1,9 @@
 @using Microsoft.AspNetCore.Components.Routing
-<Router AppAssembly=typeof(BasicTestApp.Program).Assembly>
-    <NotFoundContent>
+<Router AppAssembly="@typeof(BasicTestApp.Program).Assembly" Context="routeData">
+    <Found>
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(TestRouterLayout)" />
+    </Found>
+    <NotFound>
         <div id="test-info">Oops, that component wasn't found!</div>
-    </NotFoundContent>
+    </NotFound>
 </Router>
