Simplistic implementation of AuthorizeViewCore which I don't like. Update E2E tests.

--- a/src/Components/test/testassets/BasicTestApp/AuthTest/AuthRouter.razor
+++ b/src/Components/test/testassets/BasicTestApp/AuthTest/AuthRouter.razor
@@ -8,21 +8,21 @@
     and @page authorization rules.
 *@
 
-<CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(BasicTestApp.Program).Assembly">
-        @* This will be put back later when implemented
-        <AuthorizingContent>Authorizing...</AuthorizingContent>
-        <NotAuthorizedContent>
-            <div id="auth-failure">
-                Sorry, @(context.User.Identity.Name ?? "anonymous"), you're not authorized.
-            </div>
-        </NotAuthorizedContent>
-        *@
-    </Router>
-</CascadingAuthenticationState>
-
-<hr />
-<Links />
+<Router AppAssembly="@typeof(BasicTestApp.Program).Assembly" Context="routeData">
+    <Found>
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(AuthRouterLayout)">
+            <Authorizing>Authorizing...</Authorizing>
+            <NotAuthorized>
+                <div id="auth-failure">
+                    Sorry, @(context.User.Identity.Name ?? "anonymous"), you're not authorized.
+                </div>
+            </NotAuthorized>
+        </AuthorizeRouteView>
+    </Found>
+    <NotFound>
+        <p>There's nothing here</p>
+    </NotFound>
+</Router>
 
 @code {
     protected override void OnInitialized()
