--- a/src/Components/test/testassets/BasicTestApp/AuthTest/AuthRouterLayout.razor
+++ b/src/Components/test/testassets/BasicTestApp/AuthTest/AuthRouterLayout.razor
@@ -1,3 +1,8 @@
+@inherits LayoutComponentBase
+
+@Body
+
+<hr />
 <ul id="auth-links">
     <li><a href="AuthHome">Home</a></li>
     <li><a href="CascadingAuthenticationStateConsumer">Cascading authentication state</a></li>
