[Blazor][Fixes #11964] Limit the amount of pending renders

--- a/src/Components/test/testassets/BasicTestApp/Index.razor
+++ b/src/Components/test/testassets/BasicTestApp/Index.razor
@@ -31,6 +31,7 @@
         <option value="BasicTestApp.FormsTest.TypicalValidationComponent">Typical validation</option>
         <option value="BasicTestApp.GlobalizationBindCases">Globalization Bind Cases</option>
         <option value="BasicTestApp.HierarchicalImportsTest.Subdir.ComponentUsingImports">Imports statement</option>
+        <option value="BasicTestApp.HighFrequencyComponent">High frequency</option>
         <option value="BasicTestApp.HtmlBlockChildContent">ChildContent HTML Block</option>
         <option value="BasicTestApp.HtmlEncodedChildContent">ChildContent HTML Encoded Block</option>
         <option value="BasicTestApp.HtmlMixedChildContent">ChildContent Mixed Block</option>
@@ -43,6 +44,7 @@
         <option value="BasicTestApp.KeyCasesComponent">Key cases</option>
         <option value="BasicTestApp.KeyPressEventComponent">Key press event</option>
         <option value="BasicTestApp.LaggyTypingComponent">Laggy typing</option>
+        <option value="BasicTestApp.LimitCounterComponent">Limit counter component</option>
         <option value="BasicTestApp.LocalizedText">Localized Text</option>
         <option value="BasicTestApp.LogicalElementInsertionCases">Logical element insertion cases</option>
         <option value="BasicTestApp.LongRunningInterop">Long running interop</option>
